--- a/app/src/main/res/layout/fragment_station_information_detail.xml
+++ b/app/src/main/res/layout/fragment_station_information_detail.xml
@@ -17,11 +17,13 @@
             type="String" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.young.metro.ui.custom.CustomConstraintLayout
+        android:id="@+id/lo_detail_information"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        app:customBackgroundColor="@color/white"
+        android:transitionName="@{@string/transition_station_layout(stationName)}">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_start"
@@ -87,5 +89,5 @@
             app:layout_constraintStart_toStartOf="@id/gl_start"
             app:layout_constraintEnd_toEndOf="@id/gl_end"
             app:layout_constraintTop_toBottomOf="@id/tv_detail_information_station_name"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.young.metro.ui.custom.CustomConstraintLayout>
 </layout>
