--- a/app/src/main/res/anim/anim_item_alpha.xml
+++ b/app/src/main/res/anim/anim_item_alpha.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="250">
+    android:duration="100">
 
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"/>
+
+    <scale
+        android:fromXScale="0.8"
+        android:fromYScale="0.8"
+        android:pivotX="75%"
+        android:pivotY="75%"
+        android:toXScale="1"
+        android:toYScale="1" />
 </set>
