--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,12 @@
         <item name="android:lineSpacingExtra">2sp</item>
     </style>
 
+    <style name="BlackTextViewBoldSize16" parent="BlackTextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+    </style>
+
     <style name="BlackTextViewBoldSize18" parent="BlackTextView">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
@@ -103,5 +109,12 @@
         <item name="customStrokeWidth">1dp</item>
         <item name="cornerRadius">15dp</item>
         <item name="android:layout_marginStart">10dp</item>
+    </style>
+
+    <style name="BaseProgressBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:indeterminateTint">@color/black</item>
+        <item name="android:gravity">center</item>
     </style>
 </resources>
