--- a/app/src/main/res/layout/include_station_timetable.xml
+++ b/app/src/main/res/layout/include_station_timetable.xml
@@ -10,7 +10,7 @@
         <variable name="vm" type="com.young.presentation.viewmodel.StationTimeTableViewModel" />
 
         <variable name="timeTableLoading" type="Boolean" />
-        <variable name="timeTableData" type="com.young.presentation.model.UiTrailTimeTable" />
+        <variable name="timeTableData" type="com.young.presentation.model.UiStationTimeTable" />
     </data>
 
     <com.young.metro.ui.custom.CustomConstraintLayout
