--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:onClick="@{() -> vm.onSearchEditViewClick(true)}"
-            android:text="@={vm._userSearchStationName}"
+            android:text="@={vm.userSearchStationName}"
             app:layout_constraintTop_toBottomOf="@id/gl_top"
             app:layout_constraintStart_toStartOf="@+id/gl_start"
             app:layout_constraintEnd_toEndOf="@id/gl_end" />
