--- a/app/src/main/res/layout/include_station_timetable.xml
+++ b/app/src/main/res/layout/include_station_timetable.xml
@@ -21,6 +21,23 @@
         app:cornerRadius="15dp"
         app:customBackgroundColor="@color/colorBg">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_station_timetable_title"
+            style="@style/BlackTextViewBoldSize18"
+            android:onClick="@{() -> vm.timeTableOpenAndClose()}"
+            android:text="@string/view_station_timetable_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            spinnerArrowAnimation="@{vm.timeTableOpen}"
+            app:srcCompat="@drawable/ic_arrow_drop_down_black"
+            app:layout_constraintTop_toTopOf="@id/tv_station_timetable_title"
+            app:layout_constraintBottom_toBottomOf="@id/tv_station_timetable_title"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/gl_horizon_center"
             android:layout_width="wrap_content"
@@ -51,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:onClick="@{() -> vm.changeDayCode(DayType.SAT)}"
             android:padding="5dp"
@@ -59,7 +77,7 @@
             app:customBackgroundColor="@color/white"
             app:layout_constraintEnd_toStartOf="@id/tv_station_timetable_sun_day"
             app:layout_constraintStart_toEndOf="@id/tv_station_timetable_week_day"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_station_timetable_title" />
 
         <com.young.metro.ui.custom.CircleTextView
             android:id="@+id/tv_station_timetable_sun_day"
@@ -265,6 +283,7 @@
 
         <androidx.constraintlayout.widget.Group
             setDataCheckVisible="@{!timeTableLoading}"
+            viewOpenClose="@{vm.timeTableOpen}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:constraint_referenced_ids="tv_station_timetable_down_time_title,tv_station_timetable_up_time_title,tv_station_timetable_up_last_time,tv_station_timetable_down_last_time,tv_station_timetable_down_first_time,tv_station_timetable_up_first_time,iv_station_up_timetable_list_bg, iv_station_down_timetable_list_bg, tv_station_timetable_down_first_time_title , tv_station_timetable_up_first_time_title , tv_station_timetable_down_last_time_title , tv_station_timetable_up_last_time_title" />
