--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -76,8 +76,8 @@
                     android:id="@+id/tv_location_area_radius_10"
                     style="@style/LocationAreaRadiusTextView"
                     android:text="@string/location_radius_10"
-                    android:onClick="@{() -> vm.onLocationRadiusData(50.0)}"
-                    LocationRadiusClickCheck="@{vm.locationRadiusData == 50.0}"
+                    android:onClick="@{() -> vm.onLocationRadiusData(10.0)}"
+                    LocationRadiusClickCheck="@{vm.locationRadiusData == 10.0}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tv_location_area_radius_7"/>
@@ -88,14 +88,14 @@
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_loading"
             setDataCheckVisible="@{vm.loading}"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            app:lottie_repeatCount="10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:lottie_loop="true"
             app:lottie_autoPlay="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/gl_loading_top"
-            app:lottie_fileName="loading.json" />
+            app:lottie_rawRes="@raw/loading" />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/BlackTextViewMediumSize15"
@@ -134,6 +134,7 @@
             setDataCheckVisible="@{vm.zeroLocationDataList}"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:onClick="@{() -> vm.loadAddressDataSize()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/gl_loading_top"
