--- a/app/src/main/res/layout/include_station_entrance_guide.xml
+++ b/app/src/main/res/layout/include_station_entrance_guide.xml
@@ -1,13 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <data>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="vm"
+            type="com.young.presentation.viewmodel.DetailDropBoxItemViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.young.metro.ui.custom.CustomConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingStart="20dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="15dp"
+        app:cornerRadius="15dp"
+        app:customBackgroundColor="@color/colorBg">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_station_timetable_title"
+            style="@style/BlackTextViewBoldSize18"
+            android:text="@string/view_entrance_guide_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            spinnerArrowAnimation="@{vm.platformEntranceOpen}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@id/tv_station_timetable_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_station_timetable_title"
+            app:srcCompat="@drawable/ic_arrow_drop_down_black" />
+
+        <com.young.metro.ui.custom.CircleTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </com.young.metro.ui.custom.CustomConstraintLayout>
 </layout>
