--- a/app/src/main/res/layout/fragment_station_information_detail.xml
+++ b/app/src/main/res/layout/fragment_station_information_detail.xml
@@ -13,6 +13,10 @@
             type="com.young.presentation.viewmodel.StationTimeTableViewModel" />
 
         <variable
+            name="entranceViewModel"
+            type="com.young.presentation.viewmodel.StationEntranceViewModel" />
+
+        <variable
             name="stationName"
             type="String" />
 
@@ -88,5 +92,16 @@
             app:layout_constraintStart_toStartOf="@id/gl_start"
             app:layout_constraintTop_toBottomOf="@id/tv_detail_information_station_name"
             app:vm="@{timeTableViewModel}" />
+
+        <include
+            android:id="@+id/inc_entrance"
+            layout="@layout/include_station_entrance_guide"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/inc_timetable"
+            app:layout_constraintEnd_toEndOf="@id/gl_end"
+            app:layout_constraintStart_toEndOf="@id/gl_start"
+            app:vm="@{entranceViewModel}"/>
     </com.young.metro.ui.custom.CustomConstraintLayout>
 </layout>
