1. 이동경로 설명하는 문구 View 추가 2. fragment_station_information_detail.xml 스크롤 추가 3. Binding 수정

--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -87,7 +87,7 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottie_loading"
-            setDataCheckVisible="@{vm.loading}"
+            setDataCheckVisible="@{vm.loading &amp;&amp; !vm.zeroLocationDataList}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:lottie_loop="true"
@@ -99,7 +99,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/BlackTextViewMediumSize15"
-            setDataCheckVisible="@{vm.loading}"
+            setDataCheckVisible="@{vm.loading &amp;&amp; !vm.zeroLocationDataList}"
             android:layout_width="0dp"
             android:layout_margin="20dp"
             android:gravity="center"
