--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -9,6 +9,10 @@
         </domain>
 
         <domain includeSubdomains="true">
+            hc.kric.go.kr
+        </domain>
+
+        <domain includeSubdomains="true">
             api.data.go.kr
         </domain>
     </domain-config>
