--- a/app/src/main/res/layout/include_station_entrance_guide.xml
+++ b/app/src/main/res/layout/include_station_entrance_guide.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.young.presentation.viewmodel.StationEntranceViewModel" />
@@ -32,9 +33,9 @@
             style="@style/BlackTextViewBoldSize18"
             android:layout_width="0dp"
             android:text="@string/view_entrance_guide_title"
+            app:layout_constraintEnd_toStartOf="@id/iv_station_entrance_arrow"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_station_entrance_arrow"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_station_entrance_arrow"
@@ -49,36 +50,36 @@
         <com.young.metro.ui.custom.CircleTextView
             android:id="@+id/tv_station_entrance_up_title"
             style="@style/BlackTextViewBoldSize16"
-            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_title"
             android:layout_marginTop="15dp"
-            app:cornerRadius="10dp"
             android:gravity="center"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:customBackgroundColor="@color/white"
-            android:text="@{data.upStationTitle}"
             android:onClick="@{() -> vm.onEntranceNumberList(data.upBody)}"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:text="@{data.upStationTitle}"
+            app:cornerRadius="10dp"
+            app:customBackgroundColor="@color/white"
+            app:layout_constraintEnd_toStartOf="@id/tv_station_entrance_bottom_title"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tv_station_entrance_bottom_title"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_title" />
 
         <com.young.metro.ui.custom.CircleTextView
             android:id="@+id/tv_station_entrance_bottom_title"
             style="@style/BlackTextViewBoldSize16"
-            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_title"
             android:layout_marginTop="15dp"
             android:gravity="center"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:customBackgroundColor="@color/white"
-            android:text="@{data.downStationTitle ?? @string/view_nothing}"
             android:onClick="@{() -> vm.onEntranceNumberList(data.downBody)}"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="10dp"
+            android:paddingBottom="5dp"
+            android:text="@{data.downStationTitle ?? @string/view_nothing}"
             app:cornerRadius="10dp"
+            app:customBackgroundColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_station_entrance_up_title"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_title" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_station_entrance_number"
@@ -87,10 +88,34 @@
             android:layout_marginTop="15dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_entrance_number"
-            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_up_title"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_station_entrance_up_title"
+            tools:listitem="@layout/item_entrance_number" />
+
+        <com.young.metro.ui.custom.CircleImageView
+            android:id="@+id/iv_station_entrance_guide_img"
+            entranceGuideImage="@{vm.entranceGuideData.first}"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:padding="10dp"
+            app:cornerRadius="10dp"
+            android:onClick="@{() -> vm.onGuidePhotoMove(vm.entranceGuideData.first)}"
+            app:customBackgroundColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_station_entrance_number" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_station_entrance_guide_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/iv_station_entrance_guide_img"
+            tools:listitem="@layout/item_station_entrance_guide_description"/>
 
     </com.young.metro.ui.custom.CustomConstraintLayout>
 </layout>
